experiment/benchmarks/microservices-demo/release/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices-demo
